# ambipom

./: .gitignore  LICENSE  README.md  pyproject.toml
dataset/: README.md  validate.py
dataset/listed_retrieval_aggregation/: items.jsonl
dataset/listed_retrieval_aggregation/add_node/: 00001.json  00002.json  00003.json  00004.json  00005.json  00006.json  00007.json  00008.json  00009.json  00010.json  00011.json  00012.json  00013.json  00014.json  00015.json  00016.json  00017.json  00018.json  00019.json  00020.json  00021.json  00022.json  00023.json  00024.json  00025.json  00026.json  00027.json  00028.json  00029.json  00030.json  00031.json  00032.json  00033.json  00034.json  00035.json  00036.json  00037.json  00038.json  00039.json  00040.json  (+10 more)
dataset/listed_retrieval_aggregation/change_agent/: 00001.json  00002.json  00003.json  00004.json  00005.json  00006.json  00007.json  00008.json  00009.json  00010.json  00011.json  00012.json  00013.json  00014.json  00015.json  00016.json  00017.json  00018.json  00019.json  00020.json  (+30 more)
dataset/math_reasoning/: LICENSE  answers.json  items.jsonl
dataset/multi_hop_computation/: items.jsonl
dataset/topk_retrieval_aggregation/: items.jsonl
experiment/: README.md  evaluate.py  run.py
experiment/_helpers/: graph.py  semantic.py
experiment/sample_outputs/: summary.csv
src/ambipom/: __init__.py  plan.py  plan_history.py  planner.py  registry.py  types.py  utils.py
system/: action_logger.py  controller.py  server.py
system/frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
(+1637 files in other folders)
